# nautobot_network_provisioning

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TROUBLESHOOTING_QUICKSTART.md  __init__.py  filters.py  forms.py  navigation.py  pyproject.toml  requirements.txt  setup.py  tables.py  validators.py  views.py
.github/: changelog-config.json
.github/workflows/: ci.yml  release.yml  version-bump.yml
AGENT_PROMPT/: expert-prompt-engineer-system-prompt.md  nautobot-app-developer-prompt.md  network-cicd-factory-architecture-prompt.md
api/: __init__.py  views.py
docs/: README.md  design.md
docs/design/: 00_summary.md  01_value_accelerators.md  02_portal_request_forms.md  03_personas.md  04_concepts_and_flows.md  05_core_objects.md  06_architecture.md  07_data_model_and_context.md  08_ui_design.md  09_execution_and_providers.md  10_gitops.md  11_security_rbac_audit.md  12_migration_and_phases.md  13_integrations_and_vision.md  14_glossary_naming_open_questions.md
jobs/: __init__.py  device_type_importer.py  queue_processor.py  work_queue_import.py
migrations/: 0001_initial.py
models/: __init__.py  arp.py  jack.py  queue.py  system.py
nautobot_network_provisioning/: __init__.py  execution_action_urls.py  execution_actions.py  filters.py  forms.py  homepage.py  navigation.py  portal_urls.py  portal_views.py  tables.py  template_content.py  troubleshooting_views.py  urls.py  views.py  widgets.py
nautobot_network_provisioning/api/: __init__.py  serializers.py  urls.py  views.py
nautobot_network_provisioning/docs/: TROUBLESHOOTING_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING_STUDIO.md  TROUBLESHOOTING_TESTING.md
nautobot_network_provisioning/jobs/: __init__.py  arp_collector.py  demo_data_loader.py  demo_data_setup.py  execution_processor.py  git_sync.py  history_archiver.py  jack_import.py  mac_collector.py  network_path_tracer.py  provisioning_demo_setup.py  proxy_collector.py  task_library_sync.py
nautobot_network_provisioning/management/: __init__.py
nautobot_network_provisioning/management/commands/: add_more_tacacs_platforms.py  create_tacacs_examples.py  setup_troubleshooting.py
nautobot_network_provisioning/migrations/: 0001_initial.py  0002_add_folder_model.py  0002_configtemplate_new_matching_fields.py  0002_request_forms.py  0003_add_custom_field_data.py  0003_configtemplate_software_versions_m2m.py  0003_taskstrategy_alter_taskintent_options_and_more.py  0004_low_code_lookups.py  0004_rename_task_implementation_to_task_strategy.py  0005_add_hops_data_to_troubleshootingrecord.py  __init__.py
nautobot_network_provisioning/models/: __init__.py  catalog.py  config.py  executions.py  mac.py  providers.py  request_forms.py  tasks.py  troubleshooting.py  workflows.py
nautobot_network_provisioning/services/: __init__.py  config_push.py  context_resolver.py  execution_engine.py  implementation_selector.py  intent_resolver.py  portal_forms.py  provider_runtime.py  template_matcher.py  template_renderer.py  validator.py  workflow_runner.py
nautobot_network_provisioning/services/providers/: __init__.py  dnac.py  meraki.py  napalm_cli.py  netmiko_cli.py  servicenow.py
nautobot_network_provisioning/services/troubleshooting/: __init__.py  config.py  exceptions.py  utils.py
nautobot_network_provisioning/services/troubleshooting/graph/: __init__.py  network_graph.py  visualization.py
nautobot_network_provisioning/services/troubleshooting/interfaces/: __init__.py  f5_bigip.py  nautobot.py  nautobot_api.py  nautobot_orm.py  palo_alto.py
nautobot_network_provisioning/services/troubleshooting/steps/: __init__.py  gateway_discovery.py  input_validation.py  layer2_discovery.py  next_hop_discovery.py  path_tracing.py
nautobot_network_provisioning/static/nautobot_network_provisioning/css/: studio_task_library.css  task_studio.css  template-editor.css  troubleshooting_studio.css
nautobot_network_provisioning/static/nautobot_network_provisioning/js/: catalog_explorer.js  form-builder.js  studio_shell.js  studio_task_library.js  task_library_studio.js  task_studio_sidebar.js  task_studio_v2.js  template-editor.js  troubleshooting_studio.js  workflow_orchestrator.js
nautobot_network_provisioning/templates/nautobot_network_provisioning/: catalog_explorer.html  configtemplate_retrieve.html  execution_retrieve.html  form_designer.html  home.html  port_config_request.html  portal.html  portal_request_form.html  portservice_retrieve.html  requestform_builder.html  requestform_retrieve.html  studio_shell.html  studio_task_library.html  studio_workflow_designer.html  task_retrieve.html  task_studio_v2.html  taskdefinition_retrieve.html  taskimplementation_retrieve.html  template_ide.html  troubleshooting.html  workflow_designer.html  workflow_orchestrator.html  workflow_retrieve.html
nautobot_network_provisioning/templates/nautobot_network_provisioning/inc/: device_buttons.html  device_intent_panel.html  interface_buttons.html  request_form_fields_table.html  task_implementations_table.html  task_usage_table.html  workflow_steps_table.html
nautobot_network_provisioning/templates/nautobot_network_provisioning/studio_tools/: troubleshooting_launcher.html  troubleshooting_studio.html
nautobot_network_provisioning/templatetags/: __init__.py  network_provisioning_filters.py
nautobot_network_provisioning/tests/: __init__.py  test_api.py  test_models.py  test_phase1_phase2_smoke.py  test_templatetags.py
scripts/: verify_installation.py
services/: __init__.py  jack_lookup.py  proxy_worker.py  template_renderer.py
static/nautobot_network_provisioning/js/: template-editor.js
templatetags/: network_provisioning_tags.py
tests/: test_filters.py  test_jobs.py  test_services.py  test_views.py
