[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautobot-network-provisioning"
dynamic = ["version"]
description = "Port Configuration Automation and MAC Address Tracking for Nautobot"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Network Operations", email = "netops@example.com"}
]
keywords = [
    "nautobot",
    "network",
    "automation",
    "provisioning",
    "mac-address",
    "port-configuration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "nautobot>=2.0.0,<3.0.0",
    "jinja2>=3.0.0",
    "netmiko>=4.0.0",
    "napalm>=4.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "pylint-django>=2.5.0",
    "pre-commit>=3.0.0",
    "invoke>=2.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/AheadAviation/nautobot_network_provisioning"
Repository = "https://github.com/AheadAviation/nautobot_network_provisioning.git"
Documentation = "https://github.com/AheadAviation/nautobot_network_provisioning#readme"
Changelog = "https://github.com/AheadAviation/nautobot_network_provisioning/blob/main/CHANGELOG.md"
Issues = "https://github.com/AheadAviation/nautobot_network_provisioning/issues"

[tool.setuptools.dynamic]
version = {attr = "nautobot_network_provisioning.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["nautobot_network_provisioning*"]

[tool.setuptools.package-data]
"nautobot_network_provisioning" = [
    "templates/**/*.html",
    "static/**/*.js",
    "static/**/*.css",
]

# Black configuration
[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nautobot_network_provisioning"]

# isort configuration
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["nautobot_network_provisioning"]
skip = ["migrations"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["nautobot_network_provisioning/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# coverage configuration  
[tool.coverage.run]
source = ["nautobot_network_provisioning"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# pylint configuration
[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "nautobot.core.settings"
ignore = ["migrations", "tests"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 120
