[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautobot-network-provisioning"
version = "0.2.0"
description = "Automation authoring and execution platform for Nautobot (Tasks, Workflows, Executions)."
readme = "README.md"
authors = [
    { name = "Nautobot App Developer", email = "nautobot-app-developer@example.com" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "nautobot>=2.0.0,<3.0.0",
    "networkx>=3.0",
    "pyyaml",
    "jinja2",
    "jsonschema",
    "netmiko",
    "napalm",
    "requests",
    "pyvis",
]

[project.urls]
Homepage = "https://github.com/AheadAviation/nautobot_network_provisioning"
"Source Code" = "https://github.com/AheadAviation/nautobot_network_provisioning"
"Issue Tracker" = "https://github.com/AheadAviation/nautobot_network_provisioning/issues"

[tool.setuptools.packages.find]
include = ["nautobot_network_provisioning*"]

[tool.setuptools.package-data]
nautobot_network_provisioning = [
    "templates/**/*",
    "static/**/*",
    "migrations/**/*",
]

